[project]
name = "lacuscore"
version = "1.19.1"
description = "Core of Lacus, usable as a module"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
repository = "https://github.com/ail-project/LacusCore"
documentation = "https://lacuscore.readthedocs.io/en/latest/"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.5)",
    "playwrightcapture[recaptcha] (>=1.34.0)",
    "defang (>=0.5.3)",
    "ua-parser[regex] (>=1.0.1)",
    "redis[hiredis] (>=5.3.0,<6.0.0)",
    "dnspython (>=2.8.0)",
    "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
    "pydantic (>=2.12.2)",
    "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
    "orjson (>=3.11.3,<4.0.0)"
]

[project.urls]
Repository = "https://github.com/ail-project/LacusCore"
Issues = "https://github.com/ail-project/issues"
Documentation = "https://lacuscore.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.optional-dependencies]
docs = ["Sphinx (>=8.2.3) ; python_version >= \"3.11\""]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
types-redis = {version = "^4.6.0.20241004"}
types-requests = "^2.32.4.20250913"
types-beautifulsoup4 = "^4.12.0.20250516"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
