[project]
name = "lacuscore"
version = "1.24.0"
description = "Core of Lacus, usable as a module"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
repository = "https://github.com/ail-project/LacusCore"
documentation = "https://lacuscore.readthedocs.io/en/latest/"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dynamic = [ "classifiers" ]

dependencies = [
    "playwrightcapture[recaptcha] (>=1.39.0)",
    "redis[hiredis] (>=5.3.0,<6.0.0)",
    "dnspython (>=2.8.0)",
    "async-timeout (>=5.0.1) ; python_version < \"3.11\"",
    "pydantic (>=2.13.1)",
    "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.12\"",
    "lookyloo-models (>=0.2.0)"
]

[project.urls]
Repository = "https://github.com/ail-project/LacusCore"
Issues = "https://github.com/ail-project/issues"
Documentation = "https://lacuscore.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.optional-dependencies]
docs = ["Sphinx (>=9.1.0) ; python_version >= \"3.12\""]

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.0"
types-redis = {version = "^4.6.0.20241004"}
types-requests = "^2.33.0.20260408"
types-beautifulsoup4 = "^4.12.0.20250516"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
